cargo-features = ["edition2024"]

[package]
name = "merkle_tree_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
solana-client = "1.18.26"
solana-sdk = "1.18.26"
merkle_tree_program = { path = "../program", features = ["no-entrypoint"] }
tokio = "1.44.2"
clap = { version = "4.5.35", features = ["derive"] }
sha2 = "0.10.8"
borsh = "1.5.7"
solana-transaction-status = "1.18.26"
